# github-mcp

./: .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  Cargo.toml  README.md  doppler.yaml  package.json  server.json  tsconfig.json
.github/workflows/: ci.yml  coverage.yml  e2e-live.yml  e2e.yml  release-please.yml  release.yml
docs/: comparison.md  methods.md  playbook.md  testing.md
docs/e2e/: ISSUE_TEMPLATE.md  README.md
scripts/: e2e_live.sh  e2e_session.js  report_coverage_gaps.mjs  smoke_stdio_lf.js
src/: cli.rs  config.rs  lib.rs  main.rs  mcp.rs  server.rs  tools.rs  types.rs
src/clients/: graphql.ts  rest.ts
src/handlers/: issues.ts  prs.ts  workflows.ts
src/http/: mod.rs
src/schemas/: common.ts  issues.ts  prs.ts  workflows.ts
src/server/: index.ts  registry.ts
src/types/: mcp-sdk.d.ts
src/utils/: config.ts  errors.ts  http.ts  pagination.ts  rate.ts  redact.ts  types.ts
test/: issues.test.ts  prs.test.ts  workflows.test.ts
tests/: actions_integration.rs  integration.rs  issues_integration.rs  issues_state_and_order.rs  mcp_envelope.rs  prs_integration.rs  prs_more_integration.rs  rest_pagination_and_rate.rs  unit_http.rs
tests/live/: github_read_only.rs
