[package]
name = "github-mcp"
version = "0.1.3"
edition = "2021"
rust-version = "1.90"
description = "GitHub MCP server (stdio JSON-RPC)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HautechAI/github-mcp"
homepage = "https://github.com/HautechAI/github-mcp"
authors = ["HautechAI", "Casey Quinn <vitalii+casey-quinn@hautech.ai>"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "sync", "process"] }
futures = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }

# HTTP stack for REST/GraphQL clients (to be wired in later milestones)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate", "stream"] }
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
fastrand = "2.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
httpmock = "0.7"

[profile.release]
lto = true
codegen-units = 1
